# stock-streamer-api

./: .gitignore  pyproject.toml
stock_streamer_api/: main.py
